--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "semi": false,
+  "semi": true,
   "arrowParens": "always",
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 100,
+  "trailingComma": "all"
 }
