--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,2 +1,27 @@
-Django>=2.2,<2.3
-wagtail>=2.5,<2.6
+appdirs==1.4.3
+attrs==19.1.0
+beautifulsoup4==4.6.0
+black==19.3b0
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
+Django==2.2.3
+django-cors-headers==3.0.2
+django-modelcluster==4.4
+django-taggit==0.24.0
+django-treebeard==4.3
+djangorestframework==3.9.4
+draftjs-exporter==2.1.6
+html5lib==1.0.1
+idna==2.8
+Pillow==5.4.1
+pytz==2019.1
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+toml==0.10.0
+Unidecode==1.1.1
+urllib3==1.25.3
+wagtail==2.5.1
+webencodings==0.5.1
+Willow==1.1
