--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
+    "prettier-eslint": "^9.0.0",
     "sass-loader": "^7.1.0"
   }
 }
