--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
     "precommit": "npm run lint",
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start --port 3002",
+    "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
