--- a/front/package.json
+++ b/front/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "cross-env": "^5.2.0",
+    "full-icu": "^1.3.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
