--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
     "full-icu": "^1.3.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "stable": "^0.1.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
