--- a/front/package.json
+++ b/front/package.json
@@ -40,6 +40,7 @@
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "prettier-eslint": "^9.0.0",
+    "raw-loader": "^3.1.0",
     "sass-loader": "^7.1.0"
   }
 }
