--- a/front/package.json
+++ b/front/package.json
@@ -5,42 +5,33 @@
   "author": "danesjenovdan",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
     "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt",
     "build": "nuxt build",
     "start": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "cross-env": "^6.0.0",
+    "cross-env": "^7.0.0",
     "full-icu": "^1.3.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "2.11.0",
     "stable": "^0.1.8"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "bootstrap": "^4.3.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": ">=2.16.0",
-    "eslint-plugin-jest": ">=22.3.0",
-    "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
-    "prettier-eslint": "^9.0.0",
-    "raw-loader": "^3.1.0",
-    "sass-loader": "^7.1.0"
+    "raw-loader": "^4.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
