--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^7.0.0",
     "full-icu": "^1.3.0",
     "nuxt": "2.11.0",
-    "stable": "^0.1.8"
+    "stable": "^0.1.8",
+    "vue-pell-editor": "^2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
