--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^7.0.0",
     "full-icu": "^1.3.0",
-    "nuxt": "2.11.0",
+    "nuxt": "^2.14.6",
     "stable": "^0.1.8"
   },
   "devDependencies": {
@@ -28,8 +28,8 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "prettier": "^1.16.4",
     "raw-loader": "^4.0.0",
     "sass-loader": "^8.0.2"
