--- a/front/package.json
+++ b/front/package.json
@@ -1,37 +1,36 @@
 {
   "name": "dobrodelen_front",
   "version": "1.0.0",
-  "description": "dobrodelen_front",
-  "author": "danesjenovdan",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt start",
+    "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "cross-env": "^7.0.0",
-    "full-icu": "^1.3.0",
-    "nuxt": "^2.14.6",
+    "@nuxtjs/axios": "^5.13.6",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7",
     "stable": "^0.1.8"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/eslint-parser": "^7.14.7",
+    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "bootstrap": "^4.3.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "lodash": "^4.17.20",
-    "node-sass": "^4.14.1",
-    "prettier": "^1.16.4",
-    "raw-loader": "^4.0.0",
-    "sass-loader": "^8.0.2"
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.12.1",
+    "lodash": "^4.17.21",
+    "prettier": "^2.3.2",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.38.0",
+    "sass-loader": "10"
   }
 }
