--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,7 +1,7 @@
 appdirs==1.4.3
 attrs==19.1.0
 beautifulsoup4==4.6.0
-black==19.3b0
+# black==19.3b0
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
