--- a/front/package.json
+++ b/front/package.json
@@ -5,33 +5,15 @@
   "author": "danesjenovdan",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "dev": "nuxt dev",
+    "build": "nuxt build"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "cross-env": "^7.0.0",
-    "full-icu": "^1.3.0",
-    "nuxt": "^2.14.6",
-    "stable": "^0.1.8"
+    "nuxt": "^3.4.3"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "bootstrap": "^4.3.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "lodash": "^4.17.20",
-    "node-sass": "^4.14.1",
-    "prettier": "^1.16.4",
-    "raw-loader": "^4.0.0",
-    "sass-loader": "^8.0.2"
+    "bootstrap": "^4.6.2",
+    "lodash": "^4.17.21",
+    "sass": "^1.62.1"
   }
 }
