--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -2,10 +2,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cnvos
 resources:
+  - back/deployment.yaml
+  - back/service.yaml
+  - back/ingress.yaml
   - front/deployment.yaml
   - front/service.yaml
   - front/ingress.yaml
 images:
+  - name: dobrodelen-back
+    newName: rg.fr-par.scw.cloud/djnd/dobrodelen-back
+    newTag: "latest"
   - name: dobrodelen-front
     newName: rg.fr-par.scw.cloud/djnd/dobrodelen-front
     newTag: "latest"
