--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./back
-          file: k8s.Dockerfile
+          file: ./back/k8s.Dockerfile
           push: true
           tags: |
             rg.fr-par.scw.cloud/djnd/dobrodelen-back:${{ github.sha }}
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./front
-          file: k8s.Dockerfile
+          file: ./front/k8s.Dockerfile
           push: true
           tags: |
             rg.fr-par.scw.cloud/djnd/dobrodelen-front:${{ github.sha }}
