--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,23 +1,23 @@
-anyascii==0.3.2
+anyascii==0.3.1
 appdirs==1.4.4
 asgiref==3.6.0
-attrs==23.1.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
-beautifulsoup4==4.11.2
-black==23.3.0
-boto3==1.26.134
-botocore==1.29.134
-certifi==2023.5.7
+attrs==22.2.0
+beautifulsoup4==4.11.1
+black==22.12.0
+boto3==1.26.153
+botocore==1.29.153
+certifi==2022.12.7
 chardet==5.1.0
-charset-normalizer==3.1.0
+charset-normalizer==3.0.1
 click==8.1.3
-Django==4.1.9
-django-cors-headers==4.0.0
+Django==4.1.5
+django-cors-headers==3.13.0
 django-filter==22.1
 django-modelcluster==6.0
 django-permissionedforms==0.1
+django-storages==1.13.2
 django-taggit==3.1.0
-django-treebeard==4.7
+django-treebeard==4.6.0
 djangorestframework==3.14.0
 draftjs-exporter==2.1.7
 drf-writable-nested==0.7.0
@@ -26,30 +26,28 @@ html5lib==1.1
 idna==3.4
 jmespath==1.0.1
 l18n==2021.3
-mypy-extensions==1.0.0
-openpyxl==3.1.2
-pathspec==0.11.1
-Pillow==9.5.0
-platformdirs==3.5.1
+mypy-extensions==0.4.3
+openpyxl==3.0.10
+pathspec==0.10.3
+Pillow==9.4.0
+platformdirs==2.6.2
 psycopg2==2.9.6
 python-dateutil==2.8.2
-pytz==2023.3
+pytz==2022.7.1
 qrcodegen==1.8.0
-requests==2.30.0
+requests==2.28.2
 s3transfer==0.6.1
 six==1.16.0
-soupsieve==2.4.1
-sqlparse==0.4.4
-tablib==3.4.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+tablib==3.3.0
 telepath==0.3
 toml==0.10.2
-tomli==2.0.1
-typing_extensions==4.5.0
 Unidecode==1.3.6
-urllib3==1.26.15
-wagtail==4.1.5
+urllib3==1.26.14
+wagtail==4.1.1
 webencodings==0.5.1
 Willow==1.4.1
 xlrd==2.0.1
-XlsxWriter==3.1.0
+XlsxWriter==3.0.7
 xlwt==1.3.0
